--- a/res/layout/activity_doodle_board.xml
+++ b/res/layout/activity_doodle_board.xml
@@ -5,41 +5,54 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <scu.android.base.DoodleCanvas
-        android:id="@+id/doodleCanvas"
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1" >
+
+        <scu.android.base.DoodleCanvas
+            android:id="@+id/doodle_canvas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <include
+            android:id="@+id/paint_set"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            layout="@layout/paint"
+            android:visibility="invisible" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:background="#eeeeee"
+        android:gravity="center"
         android:orientation="horizontal" >
 
-        <ImageButton
+        <ImageView
             android:id="@+id/withdraw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
+            android:onClick="OnClick"
             android:src="@drawable/doodle_undo" />
-        <ImageButton
-            android:id="@+id/doodlePaint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/handwrite_paint" />
-        <ImageButton
+
+        <ImageView
             android:id="@+id/doodleColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
+            android:onClick="OnClick"
             android:src="@drawable/doodle_color" />
-        <ImageButton
+
+        <ImageView
             android:id="@+id/del"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
+            android:onClick="OnClick"
             android:src="@drawable/del" />
     </LinearLayout>
 
