--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -79,5 +79,10 @@
     <color name="holo_gray_bright">#33CCCCCC</color>
     <color name="question_item_backgrond">#ffffff</color>
     <color name="question_item_border">#aaa</color>
-
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="blue">#0080ff</color>
+    <color name="green">#00ff00</color>
+    <color name="purbe">#ff00ff</color>
+    <color name="orange">#ff8000</color>
 </resources>
