--- a/res/layout/chat_input_field.xml
+++ b/res/layout/chat_input_field.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    >
 
     <LinearLayout
         android:id="@id/record_pressbtn_lay"
@@ -16,7 +17,8 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="0.2"
-            android:gravity="center" >
+            android:gravity="bottom|center_horizontal" 
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:id="@id/chat_record_btn"
@@ -33,17 +35,25 @@
             android:gravity="center" >
 
             <EditText
+                android:layout_margin="2dp"
                 android:id="@id/chat_input_field"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/chat_textview_bg" />
+                android:background="@drawable/chat_textview_bg" 
+                android:maxHeight="100dp"
+                android:hint="说点什么..."
+                android:paddingLeft="3dp"
+                style="@style/text_style_medium"
+                android:gravity="center_vertical"
+                android:textCursorDrawable="@null"/>
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="0.2"
-            android:gravity="center" >
+              android:gravity="bottom|center_horizontal" 
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:id="@id/chat_add_btn"
