--- a/res/layout/chat_input_field.xml
+++ b/res/layout/chat_input_field.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <LinearLayout
         android:id="@id/record_pressbtn_lay"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/chat_input_lay_bg"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         android:visibility="visible" >
 
@@ -23,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/chat_input_voice_btn_style"
-                android:onClick="myOnclick" />
+                android:onClick="OnClick" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -36,7 +37,8 @@
                 android:id="@id/chat_input_field"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/chat_textview_bg" />
+                android:background="@drawable/chat_textview_bg"
+                android:inputType="textMultiLine|text" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -51,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/chat_input_add_btn_style"
                 android:clickable="true"
-                android:onClick="myOnclick" />
+                android:onClick="OnClick" />
         </RelativeLayout>
         <!--
                  <TextView
