--- a/res/layout/register_layout.xml
+++ b/res/layout/register_layout.xml
@@ -41,7 +41,7 @@
          
 
     </FrameLayout>
-    <LinearLayout 
+<!--     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/iconLayout"
@@ -75,9 +75,9 @@
          
         />
     
-    </LinearLayout>
+    </LinearLayout> -->
 	<RelativeLayout android:id="@+id/userRegisterLay" android:background="@anim/shape_rounded_rectangle" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
-            <TextView android:textSize="@dimen/user_title_size" android:textColor="#ff000000" android:id="@+id/email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="邮        箱:" />
+            <TextView android:textSize="@dimen/user_title_size" android:textColor="#ff000000" android:id="@+id/email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="昵       称:" />
             <AutoCompleteTextView android:textSize="@dimen/user_input_size" android:textColor="#ff000000" android:textColorHint="#ffcccccc" android:id="@+id/emailValue" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="2.0dip" android:text="" android:hint="邮箱地址" android:singleLine="true" android:maxLength="50" android:layout_toRightOf="@id/email" android:inputType="textEmailAddress" android:dropDownWidth="222.0dip" android:imeOptions="actionNext" android:dropDownHorizontalOffset="-5.0dip" android:dropDownVerticalOffset="2.0dip" style="@style/juMeiAutoCompleteTextView" />
             <ImageView android:id="@+id/line1" android:background="@drawable/line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/emailValue" />
             <TextView android:textSize="@dimen/user_title_size" android:textColor="#ff000000" android:id="@id/userName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="用  户  名:" android:layout_below="@id/line1" />
