肖逸飞提交：修改部分界面

--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -102,7 +102,7 @@
     
     <item name="popup_doodle_lay" type="id"/>
     <item name="common_editor" type="id"/>
-    
+    <item name="popup_record_lay" type="id"/>
     
 
 </resources>
