--- a/res/layout/friend_item.xml
+++ b/res/layout/friend_item.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     android:background="@anim/list_bg_selector" >
 
+
 <TextView  android:id="@+id/contactitem_catalog" android:paddingRight="4.0dip" android:layout_height="wrap_content" style="@style/MMListCatalog" />
+
 
         <RelativeLayout
             android:layout_below="@id/contactitem_catalog"
@@ -14,7 +16,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            
+            android:layout_alignParentTop="true" 
             android:padding="5dp">
 
             <FrameLayout
@@ -48,9 +50,8 @@
                 android:textColor="#ff333333"
                 android:textSize="16.0sp"
                 android:textStyle="bold"
-              
+                android:drawableRight="@drawable/male_icon"
 	    		android:drawablePadding="2dp" />
-             <!--  android:drawableRight="@drawable/male_icon" -->
             <TextView 
 			    android:layout_below="@id/friend_name" 
 			    android:id="@id/distance_textview"
