--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -197,7 +197,7 @@
             android:layout_below="@id/belowLoginlay"
             android:layout_marginLeft="10.0dip"
             android:layout_marginRight="10.0dip"
-            android:background="@anim/login_button_bg"
+            android:background="@drawable/button_long_green_bg"
             android:clickable="true"
             android:gravity="center"
             android:onClick="myOnclick"
@@ -205,5 +205,6 @@
             android:textColor="#ffffffff"
             android:textSize="20.0sp" />
     </RelativeLayout>
+    
 
 </LinearLayout>
