--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,11 +2,9 @@
 <resources>
 
     <color name="AppBackgroundColor">#ffc0e7fa</color>
-    
     <color name="TextColorBlack">#ff000000</color>
     <color name="TextColorWhite">#ffffffff</color>
     <color name="TextColorBlue">#ff0066cc</color>
-
     <color name="TextColorRed">#ffe26926</color>
     <color name="BgColor">#ffd1dce9</color>
     <color name="my_buddy_footer_color">#ffd0d0d0</color>
@@ -57,6 +55,8 @@
     <!-- A light Holo shade of blue -->
     <color name="holo_blue_light">#ff33b5e5</color>
 
+
+
     <!-- A light Holo shade of green -->
     <color name="holo_green_light">#ff99cc00</color>
     <!-- A light Holo shade of red -->
@@ -76,7 +76,22 @@
     <!-- A really bright Holo shade of blue -->
     <color name="holo_blue_bright">#ff00ddff</color>
 
+    <color name="question_item_backgrond">#ffffff</color>
+    <color name="question_item_border">#aaa</color>
+    <color name="text_normal_black">#ff333333</color>
 
+    <!-- 灰色 -->
+
+    <color name="BackgroundGrayColor">#EFEFF4</color>
+ <!-- 浅灰 -->
+    <color name="TextColorGray">#ff505050</color>
+ <!-- 接近黑色的灰色 -->
+    <color name="gray_normal">#ff686868</color>
+ <!-- 灰色 -->
+    <color name="gray_light">#33999999</color>
+ <!-- 非常浅灰 -->
+    <color name="gray_bright">#33CCCCCC</color>
+ <!-- 最浅灰 -->
 
     <color name="black">#000000</color>
     <color name="red">#ff0000</color>
@@ -99,6 +114,7 @@
     <color name="gray_normal">#ff686868</color>      <!-- 灰色 -->
     <color name="gray_light">#33999999</color>      <!-- 非常浅灰 -->
     <color name="gray_bright">#33CCCCCC</color> <!-- 最浅灰 -->
+
 
 
 </resources>
