--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -115,6 +115,13 @@
     <color name="gray_light">#33999999</color>      <!-- 非常浅灰 -->
     <color name="gray_bright">#33CCCCCC</color> <!-- 最浅灰 -->
 
+    
+     <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="blue">#0080ff</color>
+    <color name="green">#00ff00</color>
+    <color name="purbe">#ff00ff</color>
+    <color name="orange">#ff8000</color>
 
 
 </resources>
