--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -34,6 +34,7 @@
     <item name="popup_camera_lay" type="id"/>
     <item name="popup_imgpicker_lay" type="id"/>
     <item name="popup_handwrite_lay" type="id"/>
+    <item name="popup_doodle_lay" type="id"/>
     <item name="select_grade_btn" type="id"/>
     <item name="select_subject_btn" type="id"/>
     <item name="distance_textview" type="id"/>
@@ -101,8 +102,21 @@
     <item  type="id" name="popup_gridview"/>
     
     <item name="popup_doodle_lay" type="id"/>
-    <item name="common_editor" type="id"/>
     <item name="popup_record_lay" type="id"/>
+    <item name="common_editor" type="id"/>
     
+     <!-- @YouMingyang 新添加 -->
+    <item name="nearby_people" type="id"/>
+    <item name="nearby_list" type="id"/>
+    <item name="nearby_settings" type="id"/>
+    <item name="popup_menu_option_girls" type="id"/>
+    <item name="popup_menu_option_boys" type="id"/>
+    <item name="popup_menu_option_all" type="id"/>
+    <item name="popup_menu_option_clear" type="id"/>
+    <item name="groups_list" type="id"/>
+    <item name="no_network_connect" type="id"/>
+    <item name="upload_status" type="id"/>
+    <item name="upload_complete" type="id"/>
+
 
 </resources>
